# personalsite2

./: .eslintrc.js  .gitignore  .gitmodules  CNAME  Cargo.toml  README.md  eslint.config.mjs  index.html  index.js  package-lock.json  package.json  rsw.toml  rust-toolchain.toml  tailwind.config.js  tsconfig.json  vite.config.mts  wasm-worker.js  webpack.config.js
.cargo/: config.toml
assets/: index-B9KeYHep.js  index-BA8ynQl4.css  index-BHcILJWE.js  index-BINnUMm5.css  index-BKogW5Tr.js  index-BLFWE524.js  index-BTEo-NRC.js  index-BhSaG8ar.css  index-BvsIiwD9.js  index-CMIOLEmf.js  index-CVbRHvxm.js  index-C_3lSWKa.js  index-CbYLj0Ne.js  index-CrIDYpuT.js  index-Cw_TyPwx.css  index-D2jdz5RP.js  index-DE_E3gql.js  index-DHg4k8D_.css  index-DQC1R3-1.css  index-Dc-Pi2JR.js  index-DgsDJDI7.js  index-DkfJH-T8.css  index-DqpgFO9_.js  index-DvfHrMKZ.js  index-DzFzxRW7.js  index-KKB4Qhfs.css  index-fMyEAXqS.css  index-i4um04Df.js  index-wRPmDgL8.js  index-x5MGq3JQ.js  wasm_waves_bg-697VbcsB.wasm  wasm_waves_bg-BMEJ1AVo.wasm  wasm_waves_bg-BQa7UtLo.wasm  wasm_waves_bg-BQu0hebl.wasm  wasm_waves_bg-BgFyL9tP.wasm  wasm_waves_bg-Bj45eCGb.wasm  wasm_waves_bg-BokB9i9C.wasm  wasm_waves_bg-Bxx7jtSV.wasm  wasm_waves_bg-Bzs46P4p.wasm  wasm_waves_bg-C5MlGlzq.wasm  (+8 more)
cargo/: Cargo.toml
cargo/.cargo/: config.toml
cargo/src/: cmplx.rs  const_twid.rs  lib.rs  simd.rs  tuples_exact.rs  wavegen.rs
public/: index.html
rs_src/: collect_into_arrayvec.rs  const_twid.rs  gamma.rs  lib.rs  product_exact.rs  util.rs  wavegen.rs
src/: GLUtils.mts  MakeSkybox.mts  MakeTex.mts  View.mts  WasmWaves.mts  bitshuffle.rs  cmplx.rs  collect_into_arrayvec.rs  const_twid.rs  gamma.rs  index.mts  lib.rs  product_exact.rs  stride_iter.rs  tuples_exact.rs  wasm_worker.mts  wasm_worker_types.mts  wavegen.rs
src/css/: index.css
src/glsl/: maketex.frag.glsl  maketex.vert.glsl  raytrace.frag.glsl  raytrace.vert.glsl  skybox.frag.glsl  skybox.vert.glsl
src/glsl/ocean_surface/: huewheel.frag.glsl  leadr.frag.glsl  ocean.vert.glsl  oilslick.frag.glsl  toon.frag.glsl
src/glsl/ocean_surface/shared/: compute_moments.glsl  shared_func.glsl
src/ts/: GLUtils.mts  MakeTex.mts  Smooth.mts  View.mts  WasmWaves.mts  global.d.ts  index.mts  sentry.mts  wasm_constants.mts
ts_src/: GLUtils.ts  MakeSkybox.ts  MakeTex.ts  View.ts  global.d.ts  index.ts  wasm_constants.ts  wasm_worker.ts  wasm_worker_types.ts
ts_src/glsl/: maketex.frag.glsl  maketex.vert.glsl  raytrace.frag.glsl  raytrace.vert.glsl  skybox.frag.glsl  skybox.vert.glsl
wasm_waves/: Cargo.toml  rust-toolchain.toml
wasm_waves/.cargo/: config.toml
wasm_waves/src/: cmplx.rs  const_twid.rs  gamma.rs  lib.rs  panic_hook.rs  simd.rs  wavegen.rs
wasm_waves/tests/: simd.rs
