[package]
name = "wasm-bindgen-rayon-demo"
version = "0.1.0"
authors = ["Ingvar Stepanyan <rreverser@google.com>"]
edition = "2018"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
rayon = { version = "1.5" }
console_error_panic_hook = "0.1.7"
wasm-bindgen-rayon = { path = "./lib/wasm-bindgen-rayon" }
wee_alloc = "0.4.5"
itertools = "0.10.3"
web-sys = { version = "0.3.58", features = ['console'] }

# TODO: reenable wasm-opt as a separate pass
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
# debug = true
opt-level = 3
# panic = "abort" # TODO: enable for release with -Z -Z build-std-features=panic_immediate_abort

[profile.dev]
lto = true
# debug = true
opt-level = 3

[build]
target = "wasm32-unknown-unknown"
