[package]
name = "wasm_waves"
version = "0.1.0"
authors = ["Ingvar Stepanyan <rreverser@google.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.99"
# rayon = { version = "1.5" }
console_error_panic_hook = "0.1.7"
# wasm-bindgen-rayon = { path = "./lib/wasm-bindgen-rayon" }
wee_alloc = "0.4.5"
itertools = "0.13.0"
getrandom = { version = "0.2.15", features = ["js"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
# arrayvec = "0.7.2"
strided = "0.2.9"
web-sys = { version = "0.3.76", features = ['console'] }
js-sys = "0.3.76"
num-complex = "0.4.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

# TODO: reenable wasm-opt as a separate pass
[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

# [package.metadata.wasm-pack.profile.release.wasm-bindgen]
# debug-js-glue = true
# demangle-name-section = true
# dwarf-debug-info = true

[profile.dev]
opt-level = "z"

[profile.release]
lto = true
# debug = true
opt-level = "z"
# panic = "abort" # TODO: enable for release with -Z -Z build-std-features=panic_immediate_abort

[build]
target = "wasm32-unknown-unknown"
rustflags = '-Ctarget-feature=+atomics,+bulk-memory,+mutable-globals'

[unstable]
build-std = ['std', 'panic_abort']
