[package]
name = "wasm_waves"
version = "0.1.0"
authors = ["Noah Koontz"]
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = { version = "=0.2.99", default-features = false, features = [] }
itertools = { version = "0.13.0", default-features = false, features = ["use_alloc"] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rand_distr = { version = "0.4.3", default-features = false, features = ["alloc"] }
strided = { git = "https://github.com/prototypicalpro/strided-rs.git" }
# web-sys = { version = "0.3.76", default-features = false, features = ['console'] }
# js-sys = { version = "0.3.76", default-features = false }
num-complex = { version = "0.4.6", default-features = false }
talc = "4.4.2"
spin = "0.9.8"

once_cell = { version = "1.20.2", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2.19", default-features = false, features = [] }

[patch.crates-io]
once_cell = { git = "https://github.com/prototypicalpro/once_cell.git" }

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true

[profile.dev]
panic = "unwind"
